--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development --watch"
+    "build": "webpack --mode=production --watch",
+    "dev": "webpack --mode=development --watch"
   },
   "keywords": [],
   "author": "",
